# journey-search-service

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml  requirements.txt  serverless.yml
deploy/: handler.py
src/: main.py
src/api/routes/: journeys.py
src/commands/: __init__.py  interface.py  search_journeys.py
src/core/: config.py  dependencies.py
src/models/: __init__.py  models.py
src/repositories/flight_events/: __init__.py  exceptions.py  interface.py  main.py
tests/: conftest.py
tests/api/journeys/: test_search.py
tests/commands/: test_search_journeys.py
tests/repositories/: test_flight_events.py
